--- a/master.css
+++ b/master.css
@@ -19,8 +19,9 @@
 
 .Photo .Social {
     position: absolute;
-    top: 3%;
-    right: -100%;
+    content: "";
+    top: 0%;
+    right: 0%;
     visibility: hidden;
     transition: 0.1s ease;
 }
@@ -69,6 +70,7 @@
 }
 
 .Photo:hover::after {
+
     width: 100%;
     height: 100%;
     opacity: 20%;
